<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PhoneLoginActivity"
        android:background="@drawable/bj">

    <ImageView
            android:id="@+id/loginBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="51dp"
            android:background="@drawable/login_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="51dp"
            android:background="@drawable/login_cloud"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="90dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/login_cloud"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/id_login_rect"
            android:layout_width="324dp"
            android:layout_height="98dp"
            android:background="@drawable/login_rect_bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="3"
                    android:text="手机号"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

            <EditText
                    android:id="@+id/loginPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:background="@null"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/login_fenge"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="3"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

            <EditText
                    android:id="@+id/loginPsd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            app:layout_constraintLeft_toLeftOf="@+id/id_login_rect"
            app:layout_constraintRight_toRightOf="@+id/id_login_rect"
            app:layout_constraintTop_toBottomOf="@+id/id_login_rect">

        <TextView
                android:id="@+id/phoneRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_register"
                android:textColor="@color/white"
                android:textSize="10sp"/>

        <TextView
                android:id="@+id/forgetPsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:textSize="10sp"/>
    </RelativeLayout>

    <TextView
            android:id="@+id/loginBtn"
            android:layout_width="133dp"
            android:layout_height="38dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/half_oral_rect_bg"
            android:gravity="center"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_login_rect"/>
</androidx.constraintlayout.widget.ConstraintLayout>