<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bj">
    <ImageView
            android:id="@+id/backIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="51dp"
            android:background="@drawable/login_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="51dp"
            android:background="@drawable/login_cloud"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="90dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/login_cloud"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/id_login_rect"
            android:layout_width="324dp"
            android:layout_height="141dp"
            android:background="@drawable/login_rect_bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="3"
                    android:text="手机号"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

            <EditText
                    android:id="@+id/phoneEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/login_fenge"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="3"
                    android:text="@string/phone_code"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText
                        android:id="@+id/codeEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                <TextView
                        android:id="@+id/sendCodeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/send_phone_code"
                        android:textColor="@color/white"
                        android:textSize="10sp"

                />
            </FrameLayout>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/login_fenge"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="3"
                    android:text="新密码"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

            <EditText
                    android:id="@+id/newPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/confirmBtn"
            android:layout_width="133dp"
            android:layout_height="38dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/half_oral_rect_bg"
            android:gravity="center"
            android:text="@string/confirmModify"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_login_rect"/>
</androidx.constraintlayout.widget.ConstraintLayout>
